docs: add K2 KAPT internals to CLAUDE.md